Leadership statement aligned correctly

--- a/src/components/LeadershipTeam/index.css
+++ b/src/components/LeadershipTeam/index.css
@@ -1,16 +1,9 @@
 .leadership-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-    width: 710px;
-    height: 57px;
-    left: 365px;
-    top: 1238px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 56px;
-    line-height: 66px;
-    text-align: center;
-
-    color: #444444;
+    width: 100%;
+    margin-top: 1300px;
 }
